LavidaCraft Official 1.4.3

Made the Experience bar smoother. (Java/Bedrock)
Added alternative enchant glint. (Java) Enable by renaming enchanted_item_glint0.png to enchanted_item_glint.png.

LavidaCraft Official 1.4.2

Added lily pad texture that is lighter and more circular. (Java/Bedrock)
Added less noisy recipe book texture. (Java)
Improved Torch and Soul Torch animations. (Java/Bedrock)
Made pumpkin blur square and slightly less intense. (Java/Bedrock)
Restricted the color pallette of the moon to make it look better. (Java/Bedrock)
Updated to 1.18. (Java/Bedrock)

LavidaCraft Official 1.4.1.2

Changed ReadMe.txt
Added changed railfix that looks more natural. (Java)
Added less intense enchant glint. (Java)
Fixed opacity issue with rail corners. (Java/Bedrock)

LavidaCraft Official 1.4.1.1 (hotfix)

Fixed glowstones missing color. (Java/Bedrock)

LavidaCraft Official 1.4.1

Updated iron and gold nuggets. (Java/Bedrock)
Updated sugar. (Java/Bedrock)
Updated honey bottle. (Java)
Updated potions and bottles. (Java)
Updated glowstone. (Java/Bedrock)
Updated writable book. (Java/Bedrock)
Fixed manifest.json. (Bedrock)
Including ChangeLog.txt (Bedrock)

LavidaCraft Official 1.4

Added missing frozen hearts in icons.png. (Java/Bedrock)
Added custom loading screen with OptiFine. (Java)
Added the rail_fix pack. (Java)
Darkened chicken and feather texture. (Java/Bedrock)
Improved the tall seagrass texture. (Java/Bedrock)
Added emissive textures for emerald, redstone, lapis, and diamond using OptiFine. (Java)
Added emissive textures for netherite gear. (Java)
Updated ReadMe.txt with instructions to disable OptiFine features.
Added a background behind the player in the inventory. (Java)
ChangeLog.txt now specifies Bedrock and Java features.

LavidaCraft Official 1.3.3

Darkened bowstring.
Made glowstone and glowstone dust textures closer to the vanilla textures.
Made an original texture for bedrock.
Updated ReadMe.txt.