@@ -1,7 +1,8 @@
 LavidaCraft Official 1.4.3
 
-Made the Experience bar smoother. (Java/Bedrock)
-Added alternative enchant glint. (Java) Enable by renaming enchanted_item_glint0.png to enchanted_item_glint.png.
+Improved potted cactus model and texture. (Java)
+Made the Experience bar smoother. (Java)
+Added new enchant glint. (Java) Enable old version by renaming enchanted_item_glint0.png to enchanted_item_glint.png.
 
 LavidaCraft Official 1.4.2
 
